Made general base of website

--- a/Demo.html
+++ b/Demo.html
@@ -2,9 +2,31 @@
 <html>
     <head>
         <title> My First Web Page </title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <center>
         <h1>Plankton!</h1>
+        <img src="https://vignette.wikia.nocookie.net/villains/images/f/fb/SpongeBob_Sheldon_Plankton_promo.png/revision/latest?cb=20190220183845" alt="Plankton"/>
+        <h2>Profession:</h2>
+        <p>Owner of The Chum Bucket</p>
+        <h2>Goal:</h2>
+        <p>Run the Krusty Krab out of buisness and have a monopoly over the fast food industry in Bikini Bottom</p>
+        <h2>Also known as:</h2>
+        <p>"The most hated thing in Bikini Bottom" -Squidward Tentacles</p>
+        <h2>Memorable quotes:</h2>
+        <p>
         
+                <li>"Time for my highly elaborate and college educated plan."</li>
+                <li>"Goodbye everyone, I'll remember you all in therapy."</li>
+                <li>"And so passes another sleepless night."</li>
+                <li>"I don't give a barnacle.</li>
+           
+        </p>
+        <h2>Links!</h2>
+        <p>
+                Click <a href="https://www.dailymotion.com/video/x6v06up">here</a> to watch his first episode!
+            </p>
+        </center>
     </body>
 </html>
